--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FundHope - Home</title>
+    <title>Home - SOMASOTE</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -19,7 +19,7 @@
 
     <!-- Hero Section -->
     <div class="hero">
-        <h1>Welcome to FundHope</h1>
+        <h1>Welcome to SOMASOTE</h1>
         <p>Empowering students and volunteers through generous donations</p>
         <a href="donate.html" class="btn">Donate Now</a>
     </div>
@@ -43,7 +43,7 @@
     <!-- Footer -->
     <footer>
         <div class="footer-content">
-            <h2>FundHope</h2>
+            <h2>SOMASOTE</h2>
             <p>Making education accessible for everyone through donations and volunteer work.</p>
             <div class="social-icons">
                 <a href="#"><img src="https://cdn-icons-png.flaticon.com/512/733/733547.png" alt="Facebook"></a>
@@ -51,7 +51,7 @@
                 <a href="#"><img src="https://cdn-icons-png.flaticon.com/512/733/733579.png" alt="Instagram"></a>
             </div>
         </div>
-        <p class="footer-bottom">&copy; 2025 FundHope | All rights reserved.</p>
+        <p class="footer-bottom">&copy; 2025 SOMASOTE | All rights reserved.</p>
     </footer>
 
 </body>
