--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 
     <!-- Navbar -->
     <div class="navbar">
-        <a href="dashboard.html">Dashboard</a>
+        <a href="index.html">Home</a>
+		<a href="dashboard.html">Dashboard</a>
         <a href="students.html">Students</a>
         <a href="volunteer.html">Volunteers</a>
         <a href="donate.html">Donate</a>
@@ -24,21 +25,48 @@
         <a href="donate.html" class="btn">Donate Now</a>
     </div>
 
-    <!-- Image Gallery -->
-    <div class="image-gallery">
-        <div class="gallery-item">
-            <img src="https://th.bing.com/th/id/OIP.08wgkQFhtX2nceHgnwP3nAHaEc?w=290&h=180&c=7&r=0&o=5&pid=1.7" alt="Charity">
-            <div class="caption">Making an Impact</div>
+    <!-- Success Stories -->
+    <section class="success-stories">
+        <h2>Success Stories</h2>
+        <div class="story-container">
+            <div class="story">
+                <img src="https://th.bing.com/th/id/OIP.08wgkQFhtX2nceHgnwP3nAHaEc?w=290&h=180" alt="Student Success">
+                <p><strong>Mary, Age 14:</strong> With sponsorship, Mary excelled in school and won a national science competition!</p>
+            </div>
+            <div class="story">
+                <img src="https://th.bing.com/th/id/OIP.BoHyF21YAWRkLTS_j7797AHaE8?w=295&h=197" alt="Infrastructure Impact">
+                <p><strong>New Computer Lab:</strong> Thanks to donors, 200 students now have access to modern education tools.</p>
+            </div>
         </div>
-        <div class="gallery-item">
-            <img src="https://th.bing.com/th/id/OIP.BoHyF21YAWRkLTS_j7797AHaE8?w=295&h=197&c=7&r=0&o=5&pid=1.7" alt="Helping Hands">
-            <div class="caption">Helping Hands</div>
+    </section>
+
+    <!-- How it Works -->
+    <section class="how-it-works">
+        <h2>How It Works</h2>
+        <div class="steps">
+            <div class="step">
+                <h3>1. Choose a Cause</h3>
+                <p>Support a student or an infrastructure project.</p>
+            </div>
+            <div class="step">
+                <h3>2. Make a Donation</h3>
+                <p>Your contribution directly impacts education.</p>
+            </div>
+            <div class="step">
+                <h3>3. Track Progress</h3>
+                <p>Receive updates and see the change you make!</p>
+            </div>
         </div>
-        <div class="gallery-item">
-            <img src="https://th.bing.com/th/id/OIP.pt8cRBihpsJsQPnXNJZaIgHaE8?w=266&h=180&c=7&r=0&o=5&pid=1.7" alt="Students">
-            <div class="caption">Education for All</div>
+    </section>
+
+    <!-- Sponsor Shortcuts -->
+    <section class="sponsor-shortcuts">
+        <h2>Make a Difference</h2>
+        <div class="sponsor-options">
+            <a href="sponsor-student.html" class="btn">Sponsor a Student</a>
+            <a href="sponsor-infrastructure.html" class="btn">Sponsor Infrastructure</a>
         </div>
-    </div>
+    </section>
 
     <!-- Footer -->
     <footer>
