--- a/infrastructure.html
+++ b/infrastructure.html
@@ -10,17 +10,67 @@
 
     <div class="navbar">
         <a href="index.html">Home</a>
-        <a href="dashboard.html">Dashboard</a>
+		<a href="dashboard.html">Dashboard</a>
         <a href="students.html">Students</a>
         <a href="volunteer.html">Volunteers</a>
         <a href="donate.html">Donate</a>
-        
+        <a href="infrastructure.html">Infrastructure</a>
     </div>
 
     <div class="hero">
         <h1>Building a Stronger Future</h1>
         <p>See how we use donations to improve education infrastructure</p>
     </div>
+
+    <!-- Urgent Funding Needed -->
+    <section class="urgent-projects">
+        <h2>Urgent Funding Needed</h2>
+
+        <div class="project-container">
+            <div class="project">
+                <img src="https://th.bing.com/th/id/OIP.oBw1Uq07ZvjvMV5AAo71egHaE8?rs=1&pid=ImgDetMain" alt="Lab Renovation">
+                <h3>Science Lab Renovation</h3>
+                <p>We need funds to renovate our outdated science lab and provide students with better learning resources.</p>
+                <div class="progress-bar">
+                    <div class="progress" style="width: 65%;">65%</div>
+                </div>
+                <a href="donate.html" class="btn">Donate Now</a>
+            </div>
+
+            <div class="project">
+                <img src="https://th.bing.com/th/id/R.fe37f790da5d0c9b1724cbdccbf9e0b7?rik=vIVMU%2be%2bf1fB0Q&riu=http%3a%2f%2fwww.aaascholarships.org%2fwp-content%2fuploads%2f2015%2f12%2fStudents-in-classroom.jpg&ehk=eCij%2b%2bBOsmz8czBO74F1E6nuDL9ZGTqW4UcOtzBY2wI%3d&risl=&pid=ImgRaw&r=0" alt="Classroom Renovation">
+                <h3>Classroom Renovation</h3>
+                <p>Help us repair classrooms and provide a comfortable space for students to learn effectively.</p>
+                <div class="progress-bar">
+                    <div class="progress" style="width: 45%;">45%</div>
+                </div>
+                <a href="donate.html" class="btn">Donate Now</a>
+            </div>
+        </div>
+    </section>
+
+    <!-- Infrastructure Development -->
+    <section class="infrastructure-development">
+        <h2>Infrastructure Projects</h2>
+        <p>Support the development of schools and education facilities.</p>
+
+        <div class="project">
+            <h3>Sports Equipment & Playground</h3>
+            <p>Providing sports facilities to encourage student physical activities and team-building skills.</p>
+        </div>
+    </section>
+
+    <!-- Footer -->
+    <footer>
+        <div class="footer-content">
+            <h2>Help Us Build a Better Future</h2>
+            <p>Every contribution makes a difference in improving education infrastructure.</p>
+            
+        </div>
+        <div class="footer-bottom">
+            &copy; 2025 SOMASOTE | All Rights Reserved
+        </div>
+    </footer>
 
 </body>
 </html>
