--- a/students.html
+++ b/students.html
@@ -8,19 +8,55 @@
 </head>
 <body>
 
+    <!-- Navbar -->
     <div class="navbar">
         <a href="index.html">Home</a>
-        <a href="dashboard.html">Dashboard</a>
+		<a href="dashboard.html">Dashboard</a>
+        <a href="students.html">Students</a>
         <a href="volunteer.html">Volunteers</a>
         <a href="donate.html">Donate</a>
         <a href="infrastructure.html">Infrastructure</a>
-        
     </div>
 
+    <!-- Hero Section -->
     <div class="hero">
-        <h1>Our Students</h1>
-        <p>Supporting students with funding and opportunities</p>
+        <h1>Meet Our Students</h1>
+        <p>Help change lives by sponsoring a student today.</p>
     </div>
+
+    <!-- Student Profiles -->
+    <div class="students-container">
+        <div class="student-card">
+            <img src="https://th.bing.com/th/id/OIP.DQKdYA6bYTWSePGcAyofpgHaHa?w=193&h=194&c=7&r=0&o=5&pid=1.7" alt="Student 1">
+            <h3>John Doe</h3>
+            <p>Age: 12 | Class: 6</p>
+            <a href="sponsor.html" class="btn">Sponsor John</a>
+        </div>
+
+        <div class="student-card">
+            <img src="https://th.bing.com/th/id/OIP.NbhyBMyQz_qFT9uGOVqBMQHaHa?w=194&h=194&c=7&r=0&o=5&pid=1.7" alt="Student 2">
+            <h3>Jane Smith</h3>
+            <p>Age: 10 | Class: 4</p>
+            <a href="sponsor.html" class="btn">Sponsor Jane</a>
+        </div>
+
+        <div class="student-card">
+            <img src="https://th.bing.com/th/id/OIP.k9UTeMNthil4qqCKe2OtNwHaE8?w=267&h=180&c=7&r=0&o=5&pid=1.7" alt="Student 3">
+            <h3>Michael Lee</h3>
+            <p>Age: 14 | Class: 8</p>
+            <a href="sponsor.html" class="btn">Sponsor Michael</a>
+        </div>
+    </div>
+	<footer>
+    <div class="footer-content">
+        <h2>Join Us in Making a Difference</h2>
+        <p>Your support helps change lives and build brighter futures.</p>
+        
+    </div>
+    <div class="footer-bottom">
+        &copy; 2025 SOMASOTE | All Rights Reserved
+    </div>
+</footer>
 
 </body>
 </html>
