--- a/dashboard.html
+++ b/dashboard.html
@@ -10,19 +10,92 @@
 
     <div class="navbar">
         <a href="index.html">Home</a>
+		<a href="dashboard.html">Dashboard</a>
         <a href="students.html">Students</a>
         <a href="volunteer.html">Volunteers</a>
         <a href="donate.html">Donate</a>
         <a href="infrastructure.html">Infrastructure</a>
-        
     </div>
 
     <div class="hero">
         <h1>Dashboard</h1>
         <p>Track donations, student progress, and volunteer efforts</p>
     </div>
+
+    <!-- Dashboard Stats Section -->
+    <div class="dashboard-container">
+        <div class="stat-card">
+            <h3>Total Amount Donated</h3>
+            <p>$10,500</p>
+        </div>
+        <div class="stat-card">
+            <h3>Students/Projects Sponsored</h3>
+            <p>15 Students | 5 Projects</p>
+        </div>
+        <div class="stat-card">
+            <h3>Impact Score</h3>
+            <p>87 Points</p>
+        </div>
+    </div>
+
+    <!-- Donation Progress -->
+    <div class="progress-section">
+        <h2>Funding Progress</h2>
+        <div class="progress-bar">
+            <div class="progress" style="width: 70%;">70%</div>
+        </div>
+    </div>
+
+    <!-- Recent Donations -->
+    <div class="recent-donations">
+        <h2>Recent Donations</h2>
+        <table>
+            <tr>
+                <th>Donor</th>
+                <th>Amount</th>
+                <th>Date</th>
+            </tr>
+            <tr>
+                <td>John Doe</td>
+                <td>$500</td>
+                <td>Feb 8, 2025</td>
+            </tr>
+            <tr>
+                <td>Mary Smith</td>
+                <td>$250</td>
+                <td>Feb 7, 2025</td>
+            </tr>
+            <tr>
+                <td>Alex Johnson</td>
+                <td>$150</td>
+                <td>Feb 6, 2025</td>
+            </tr>
+        </table>
+    </div>
+
+    <!-- Footer -->
+    <footer>
+        <div class="footer-content">
+            <h2>SOMASOTE</h2>
+            <p>Empowering Education, Building a Better Future</p>
+           
+        </div>
+        <div class="footer-bottom">
+            &copy; 2025 SOMASOTE. All rights reserved.
+        </div>
+    </footer>
+	<style>
 	
 	
+	document.addEventListener("DOMContentLoaded", function() {
+    let progress = document.querySelector(".progress");
+    let percentage = 75; // Example percentage (Set dynamically)
+    progress.style.width = percentage + "%";
+    progress.innerHTML = `<span>${percentage}% Funded</span>`;
+});
+
+	
+	</style>
 
 </body>
 </html>
