--- a/donate.html
+++ b/donate.html
@@ -27,7 +27,7 @@
             
             <!-- Classroom Sponsor -->
             <div class="donation-card">
-                <img src="classroom.jpg" alt="Classroom Sponsor">
+                <img src="https://tse2.mm.bing.net/th?id=OIP.NG4mXm84PAA1ckZaK3ebggHaDx&pid=Api&P=0&h=180" alt="Classroom Sponsor">
                 <h3>Classroom Sponsor</h3>
                 <p>Support an entire classroom with essential supplies and equipment.</p>
                 <div class="price">$100 / month</div>
@@ -41,7 +41,7 @@
 
             <!-- Book Bundle -->
             <div class="donation-card">
-                <img src="books.jpg" alt="Book Bundle">
+                <img src="https://tse3.mm.bing.net/th?id=OIP.tMOiTY0it-XtHEIoFaxMvwAAAA&pid=Api&P=0&h=180" alt="Book Bundle">
                 <h3>Book Bundle</h3>
                 <p>Provide textbooks and materials for 10 students.</p>
                 <div class="price">$50 / month</div>
